update nav bar on brands and homepage

--- a/src/Brands.html
+++ b/src/Brands.html
@@ -7,48 +7,41 @@
     <body>
         <nav>
             <div id = "nav-bar-left">
-                <!--<h1>BRANDS</h1>
-                <h1>CALENDAR</h1>
-                <h1>DROPS</h1>
-                <h1>IN STOCK</h1>
-                <img src="logo.jpg">
-                <h1>SEARCH</h1>
-                <h1>PROFILE</h1>
-                <h1>SAVED</h1>
-                <h1>CART</h1>-->
-
-            <ul>
-                <li>
-                    <a href=#>BRANDS</a>
-                </li>
-                <li>
-                    <a href=#>CALENDAR</a>
-                </li>
-                <li>
-                    <a href=#>DROPS</a>
-                </li>
-                <li>
-                    <a href=#>IN STOCK</a>
-                </li>
-                <li>
-                    <img src="logo.jpg">
-                </li>
-                <li>
-                    <a href=#>SEARCH</a>
-                </li>
-                <li>
-                    <a href=#>PROFILE</a>
-                </li>
-                <li>
-                    <a href=#>SAVED</a>
-                </li>
-                <li>
-                    <a href=#>CART</a>
-                </li>
-
+                <ul>
+                    <li>
+                        <a href=#>BRANDS</a>
+                    </li>
+                    <li>
+                        <a href=#>CALENDAR</a>
+                    </li>
+                    <li>
+                        <a href=#>DROPS</a>
+                    </li>
+                    <li>
+                        <a href=#>IN STOCK</a>
+                    </li>
+                </ul>
+            </div>
+            <div id = "logo">
+                <ul>
+                </ul>
+            </div>
+            <div id = "nav-bar-right">
+                <ul>
+                    <li>
+                        <a href=#>SEARCH</a>
+                    </li>
+                    <li>
+                        <a href=#>PROFILE</a>
+                    </li>
+                    <li>
+                        <a href=#>SAVED</a>
+                    </li>
+                    <li>
+                        <a href=#>CART</a>
+                    </li>
               </ul>
             </div>
-
         </nav>
 
                 <div id = "title">
@@ -141,7 +134,7 @@
                 </div>
                 <hr>
                 <div id = "filter">
-                    <li>SORT</li>
+                    <li><strong>SORT</strong></li>
                     <li><a href=#>Alphabetic</a></li>
                     <li><a href=#>Next Drop</a></li>
                     <li><a href=#>Trending</a></li>
