updated header and footer, can be used on every page. Can now navigate between Brands and Homepage

--- a/src/homepage.html
+++ b/src/homepage.html
@@ -4,44 +4,48 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <nav>
-        <div id = "nav-bar-left">
-            <ul>
-                <li>
-                    <a href=#>BRANDS</a>
-                </li>
-                <li>
-                    <a href=#>CALENDAR</a>
-                </li>
-                <li>
-                    <a href=#>DROPS</a>
-                </li>
-                <li>
-                    <a href=#>IN STOCK</a>
-                </li>
-            </ul>
-        </div>
-        <div id = "logo">
-            <ul>
-            </ul>
-        </div>
-        <div id = "nav-bar-right">
-            <ul>
-                <li>
-                    <a href=#>SEARCH</a>
-                </li>
-                <li>
-                    <a href=#>PROFILE</a>
-                </li>
-                <li>
-                    <a href=#>SAVED</a>
-                </li>
-                <li>
-                    <a href=#>CART</a>
-                </li>
-          </ul>
-        </div>
-    </nav>
+        <nav>
+            <div id = "nav-bar-left">
+                <ul>
+                    <li>
+                        <a href=Brands.html>BRANDS</a>
+                    </li>
+                    <li>
+                        <a href=#>CALENDAR</a>
+                    </li>
+                    <li>
+                        <a href=#>DROPS</a>
+                    </li>
+                    <li>
+                        <a href=#>IN STOCK</a>
+                    </li>
+                </ul>
+            </div>
+            
+                <div id = "logo">
+                    <a href = "homepage.html">
+                        <ul>
+                        </ul>
+                    </a>
+                </div>
+            
+            <div id = "nav-bar-right">
+                <ul>
+                    <li>
+                        <a href=#>SEARCH</a>
+                    </li>
+                    <li>
+                        <a href=#>PROFILE</a>
+                    </li>
+                    <li>
+                        <a href=#>SAVED</a>
+                    </li>
+                    <li>
+                        <a href=#>CART</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     <div class="sidenav">
       <h2>UPCOMING RELEASES</h2>
       <a href="#">02/10</a>
@@ -52,17 +56,28 @@
       <a href="#">Event4</a>
     </div>
   </main>
-    <footer>
+
+  <hr>
+  <footer>
         <div id = "footer-left">
             <p>Follow Us</p>
+            <div id = "follow-icons">
+                <p></p>
+                <p></p>
+                <p></p>
+            </div>
         </div>
         <div id = "footer-middle">
-            <p>ENTER EMAIL</p>
+            <p>DON'T MISS OUT ON THE NEXT DROP! SUBSCRIBE TO OUR NEWSLETTER</p>
+            <div id = "email-container">
+                    <input type="email" id="email" name="email">
+                    <button type="button">Subscribe</button>
+            </div>
         </div>
         <div id = "footer-right">
-            <p>About</p>
-            <p>Contact</p>
-            <p>FAQ</p>
+            <li>FAQs</li>
+            <li>Contact</li>
+            <li>About</li>
         </div>
     </footer>
 
