--- a/src/Brands.html
+++ b/src/Brands.html
@@ -9,7 +9,7 @@
             <div id = "nav-bar-left">
                 <ul>
                     <li>
-                        <a href=#>BRANDS</a>
+                        <a href=Brands.html>BRANDS</a>
                     </li>
                     <li>
                         <a href=#>CALENDAR</a>
@@ -22,10 +22,14 @@
                     </li>
                 </ul>
             </div>
-            <div id = "logo">
-                <ul>
-                </ul>
-            </div>
+            
+                <div id = "logo">
+                    <a href = "homepage.html">
+                        <ul>
+                        </ul>
+                    </a>
+                </div>
+            
             <div id = "nav-bar-right">
                 <ul>
                     <li>
@@ -44,168 +48,177 @@
             </div>
         </nav>
 
-                <div id = "title">
-                    <br>
-                    <h1>BRANDS</h1>
-                </div>
-                <hr>
-                <div id="alphabetic-sort">
-                    <li>
-                        <a href=#>A</a>
-                    </li>
-                    <li>
-                        <a href=#>B</a>
-                    </li>
-                    <li>
-                        <a href=#>C</a>
-                    </li>
-                    <li>
-                        <a href=#>D</a>
-                    </li>
-                    <li>
-                        <a href=#>E</a>
-                    </li>
-                    <li>
-                        <a href=#>F</a>
-                    </li>
-                    <li>
-                        <a href=#>G</a>
-                    </li>
-                    <li>
-                        <a href=#>H</a>
-                    </li>
-                    <li>
-                        <a href=#>I</a>
-                    </li>
-                    <li>
-                        <a href=#>J</a>
-                    </li>
-                    <li>
-                        <a href=#>K</a>
-                    </li>
-                    <li>
-                        <a href=#>L</a>
-                    </li>
-                    <li>
-                        <a href=#>M</a>
-                    </li>
-                    <li>
-                        <a href=#>N</a>
-                    </li>
-                    <li>
-                        <a href=#>O</a>
-                    </li>
-                    <li>
-                        <a href=#>P</a>
-                    </li>
-                    <li>
-                        <a href=#>Q</a>
-                    </li>
-                    <li>
-                        <a href=#>R</a>
-                    </li>
-                    <li>
-                        <a href=#>S</a>
-                    </li>
-                    <li>
-                        <a href=#>T</a>
-                    </li>
-                    <li>
-                        <a href=#>U</a>
-                    </li>
-                    <li>
-                        <a href=#>V</a>
-                    </li>
-                    <li>
-                        <a href=#>W</a>
-                    </li>
-                    <li>
-                        <a href=#>X</a>
-                    </li>
-                    <li>
-                        <a href=#>Y</a>
-                    </li>
-                    <li>
-                        <a href=#>Z</a>
-                    </li>
-                    <li>
-                        <a href=#>#</a>
-                    </li>
-                </div>
-                <hr>
-                <div id = "filter">
-                    <li><strong>SORT</strong></li>
-                    <li><a href=#>Alphabetic</a></li>
-                    <li><a href=#>Next Drop</a></li>
-                    <li><a href=#>Trending</a></li>
-                </div>
+        <div id = "title">
+            <br>
+            <h1>BRANDS</h1>
+        </div>
+        <hr>
+        <div id="alphabetic-sort">
+            <li>
+                <a href=#>A</a>
+            </li>
+            <li>
+                <a href=#>B</a>
+            </li>
+            <li>
+                <a href=#>C</a>
+            </li>
+            <li>
+                <a href=#>D</a>
+            </li>
+            <li>
+                <a href=#>E</a>
+            </li>
+            <li>
+                <a href=#>F</a>
+            </li>
+            <li>
+                <a href=#>G</a>
+            </li>
+            <li>
+                <a href=#>H</a>
+            </li>
+            <li>
+                <a href=#>I</a>
+            </li>
+            <li>
+                <a href=#>J</a>
+            </li>
+            <li>
+                <a href=#>K</a>
+            </li>
+            <li>
+                <a href=#>L</a>
+            </li>
+            <li>
+                <a href=#>M</a>
+            </li>
+            <li>
+                <a href=#>N</a>
+            </li>
+            <li>
+                <a href=#>O</a>
+            </li>
+            <li>
+                <a href=#>P</a>
+            </li>
+            <li>
+                <a href=#>Q</a>
+            </li>
+            <li>
+                <a href=#>R</a>
+            </li>
+            <li>
+                <a href=#>S</a>
+            </li>
+            <li>
+                <a href=#>T</a>
+            </li>
+            <li>
+                <a href=#>U</a>
+            </li>
+            <li>
+                <a href=#>V</a>
+            </li>
+            <li>
+                <a href=#>W</a>
+            </li>
+            <li>
+                <a href=#>X</a>
+            </li>
+            <li>
+                <a href=#>Y</a>
+            </li>
+            <li>
+                <a href=#>Z</a>
+            </li>
+            <li>
+                <a href=#>#</a>
+            </li>
+        </div>
+        <hr>
+        <div id = "filter">
+            <li><strong>SORT</strong></li>
+            <li><a href=#>Alphabetic</a></li>
+            <li><a href=#>Next Drop</a></li>
+            <li><a href=#>Trending</a></li>
+        </div>
 
 
-            <div id = "brand-table">
-                <table>
-                    <tr>
-                        <td class="Alphabet">A</td>
-                        <td>
-                            <p>A.P.C.</p>
-                            <p>ACNE STUDIOS</p>
-                            <P>ADER ERROR</P>
-                        </td>
-                        <td>
-                            <p>ADDIDAS ORIGINALS</p>
-                            <p>ALEXANDER MCQUEEN</p>
-                            <p>ALEXANDER WANG</p>
-                        </td>
-                        <td>
-                            <p>ALEXANDER WANG.T</p>
-                            <p>AMBUSH</p>
-                            <p>ARIES</p>
-                            <p>ASICS</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="Alphabet">B</td>
-                        <td>
-                            <p>BY FAR</p>
-                        </td>
-                        <td>
-                            <p>BOTTEGA VENETA</p>
-                        </td>
-                        <td>
-                            <p>BURBERRY</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="Alphabet">C</td>
-                        <td>
-                            <p>CONVERSE</p>
-                            <p>CHEERY LA</p>
-                        </td>
-                        <td>
-                            <p>COMMON PROJECTS</p>
-                        </td>
-                        <td>
-                            <p>CANADA GOOSE</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="Alphabet">D</td>
-                        <td>
-                            <p>DION LEE</p>
-                        </td>
-                        <td>
-                            <p>DICKIES</p>
-                        </td>
-                    </tr>
-                </table>
-            </div>
+        <div id = "brand-table">
+            <table>
+                <tr>
+                    <td class="Alphabet">A</td>
+                    <td>
+                        <p>A.P.C.</p>
+                        <p>ACNE STUDIOS</p>
+                        <P>ADER ERROR</P>
+                    </td>
+                    <td>
+                        <p>ADDIDAS ORIGINALS</p>
+                        <p>ALEXANDER MCQUEEN</p>
+                        <p>ALEXANDER WANG</p>
+                    </td>
+                    <td>
+                        <p>ALEXANDER WANG.T</p>
+                        <p>AMBUSH</p>
+                        <p>ARIES</p>
+                        <p>ASICS</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="Alphabet">B</td>
+                    <td>
+                        <p>BY FAR</p>
+                    </td>
+                    <td>
+                        <p>BOTTEGA VENETA</p>
+                    </td>
+                    <td>
+                        <p>BURBERRY</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="Alphabet">C</td>
+                    <td>
+                        <p>CONVERSE</p>
+                        <p>CHEERY LA</p>
+                    </td>
+                    <td>
+                        <p>COMMON PROJECTS</p>
+                    </td>
+                    <td>
+                        <p>CANADA GOOSE</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="Alphabet">D</td>
+                    <td>
+                        <p>DION LEE</p>
+                    </td>
+                    <td>
+                        <p>DICKIES</p>
+                    </td>
+                </tr>
+            </table>
+        </div>
         <hr>
 
         <footer>
             <div id = "footer-left">
                 <p>Follow Us</p>
+                <div id = "follow-icons">
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </div>
             </div>
             <div id = "footer-middle">
-                <p>ENTER EMAIL</p>
+                <p>DON'T MISS OUT ON THE NEXT DROP! SUBSCRIBE TO OUR NEWSLETTER</p>
+                <div id = "email-container">
+                        <input type="email" id="email" name="email">
+                        <button type="button">Subscribe</button>
+                </div>
             </div>
             <div id = "footer-right">
                 <li>FAQs</li>
