added in-stock, basic layout and styling

--- a/src/Brands.html
+++ b/src/Brands.html
@@ -18,7 +18,7 @@
                         <a href=#>DROPS</a>
                     </li>
                     <li>
-                        <a href=#>IN STOCK</a>
+                        <a href=inStock.html>IN STOCK</a>
                     </li>
                 </ul>
             </div>
@@ -137,7 +137,7 @@
             </li>
         </div>
         <hr>
-        <div id = "filter">
+        <div class = "filter">
             <li><strong>SORT</strong></li>
             <li><a href=#>Alphabetic</a></li>
             <li><a href=#>Next Drop</a></li>
@@ -221,9 +221,9 @@
                 </div>
             </div>
             <div id = "footer-right">
-                <li>FAQs</li>
-                <li>Contact</li>
-                <li>About</li>
+                <li><a href = #>FAQs</a></li>
+                <li><a href = #>Contacts</a></li>
+                <li><a href = #>About</a></li>
             </div>
         </footer>
     </body>
