--- a/src/homepage.html
+++ b/src/homepage.html
@@ -17,7 +17,7 @@
                         <a href=#>DROPS</a>
                     </li>
                     <li>
-                        <a href=#>IN STOCK</a>
+                        <a href=inStock.html>IN STOCK</a>
                     </li>
                 </ul>
             </div>
