Added calendar.html, structure and basic styling

--- a/src/Brands.html
+++ b/src/Brands.html
@@ -12,7 +12,7 @@
                         <a href=Brands.html>BRANDS</a>
                     </li>
                     <li>
-                        <a href=#>CALENDAR</a>
+                        <a href=calendar.html>CALENDAR</a>
                     </li>
                     <li>
                         <a href=#>DROPS</a>
@@ -153,6 +153,7 @@
                         <p>A.P.C.</p>
                         <p>ACNE STUDIOS</p>
                         <P>ADER ERROR</P>
+                        <p>ASICS</p>
                     </td>
                     <td>
                         <p>ADDIDAS ORIGINALS</p>
@@ -163,7 +164,7 @@
                         <p>ALEXANDER WANG.T</p>
                         <p>AMBUSH</p>
                         <p>ARIES</p>
-                        <p>ASICS</p>
+                        
                     </td>
                 </tr>
                 <tr>
