--- a/src/homepage.html
+++ b/src/homepage.html
@@ -11,7 +11,7 @@
                         <a href=Brands.html>BRANDS</a>
                     </li>
                     <li>
-                        <a href=#>CALENDAR</a>
+                        <a href=calendar.html>CALENDAR</a>
                     </li>
                     <li>
                         <a href=#>DROPS</a>
