--- a/src/inStock.html
+++ b/src/inStock.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Brands</title>
+        <title>In Stock</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
@@ -12,7 +12,7 @@
                         <a href=Brands.html>BRANDS</a>
                     </li>
                     <li>
-                        <a href=#>CALENDAR</a>
+                        <a href=calendar.html>CALENDAR</a>
                     </li>
                     <li>
                         <a href=#>DROPS</a>
@@ -73,6 +73,30 @@
                 <hr>
             </div>
             <div id = "right-side">
+                <div class = "in-stock-item">
+                    <p class = "in-stock-img"></p>
+                    <div class = "in-stock-text">
+                        <p><strong>Brand</strong></p>
+                        <p>Name</p>
+                        <p>Price</p>
+                    </div>
+                </div>
+                <div class = "in-stock-item">
+                    <p class = "in-stock-img"></p>
+                    <div class = "in-stock-text">
+                        <p><strong>Brand</strong></p>
+                        <p>Name</p>
+                        <p>Price</p>
+                    </div>
+                </div>
+                <div class = "in-stock-item">
+                    <p class = "in-stock-img"></p>
+                    <div class = "in-stock-text">
+                        <p><strong>Brand</strong></p>
+                        <p>Name</p>
+                        <p>Price</p>
+                    </div>
+                </div>
                 <div class = "in-stock-item">
                     <p class = "in-stock-img"></p>
                     <div class = "in-stock-text">
