reworked calendar to use grid instead of flex

--- a/src/calendar.html
+++ b/src/calendar.html
@@ -53,119 +53,169 @@
             <h1>OCTOBER</h1>
         </div>
 
-        <div class = "calendar-row" id = "calendar-header">
-            <div class = "calendar-day" id = "calendar-header-day">
-                <h1>S</h1>
+        <div class = calendar>
+            <div id = calendar-header>
+
             </div>
-            <div class = "calendar-day" id = "calendar-header-day">
-                <h1>M</h1>
-            </div>
-            <div class = "calendar-day" id = "calendar-header-day">
-                <h1>T</h1>
-            </div>
-            <div class = "calendar-day" id = "calendar-header-day">
-                <h1>W</h1>
-            </div>
-            <div class = "calendar-day" id = "calendar-header-day">
-                <h1>T</h1>
-            </div>
-            <div class = "calendar-day" id = "calendar-header-day">
-                <h1>F</h1>
-            </div>
-            <div class = "calendar-day" id = "calendar-header-day">
-                <h1>S</h1>
-            </div>
-        </div>
-        <hr>
-        <div id = "calendar-container">
-            <div class = "calendar-row">
-                <div class = "calendar-day">
-                </div>
-                <div class = "calendar-day">
-                </div>
-                <div class = "calendar-day">
-                </div>
-                <div class = "calendar-day">
-                </div>
-                <div class = "calendar-day">
-                    <div class = "calendar-day-date">
-                        <p>01</p>
+            <div id = calendar-body>
+                <div class = calendar-week id = calendar-header>
+                    <div class = calendar-day id = calendar-header-day>
+                        <h2>S</h2>
+                    </div>
+                    <div class = calendar-day id = calendar-header-day>
+                        <h2>M</h2>
+                    </div>
+                    <div class = calendar-day id = calendar-header-day>
+                        <h2>T</h2>
+                    </div>
+                    <div class = calendar-day id = calendar-header-day>
+                        <h2>W</h2>
+                    </div>
+                    <div class = calendar-day id = calendar-header-day>
+                        <h2>T</h2>
+                    </div>
+                    <div class = calendar-day id = calendar-header-day>
+                        <h2>F</h2>
+                    </div>
+                    <div class = calendar-day id = calendar-header-day>
+                        <h2>S</h2>
                     </div>
                 </div>
-                <div class = "calendar-day" id = "has-event">
-                    <div class = "calendar-day-date">
-                        <p>02</p>
-                        <div class = "calendar-event">
-                            <p>Brand</p>
-                            <button type="button" id = "calendar-event-button">Subscribe</button>
+                <hr id = calendar-break>
+                <div class = calendar-week>
+                    <div class = calendar-day>
+                        <h1></h1>
+                    </div>
+                    <div class = calendar-day>
+                        <h1></h1>
+                    </div>
+                    <div class = calendar-day>
+                        <h1></h1>
+                    </div>
+                    <div class = calendar-day>
+                        <h1></h1>
+                    </div>
+                    <div class = calendar-day>
+                        <h1>01</h1>
+                    </div>
+                    <div class = calendar-day>
+                        <h1>02</h1>
+                    </div>
+                    <div class = calendar-day>
+                        <h1>03</h1>
+                    </div>
+                </div>
+
+                <div class = calendar-week>
+                    <div class = calendar-day>
+                        <h1>04</h1>
+                    </div>
+                    <div class = calendar-day>
+                        <h1>05</h1>
+                    </div>
+                    <div class = calendar-day id = has-event>
+                        <h1>06</h1>
+                        <h2>Fear Of God</h2>
+                        <div id = event-button>
+                            <button type="button">SHOP NOW</button>
+                        </div>
+                    </div>
+                    <div class = calendar-day>
+                        <h1>07</h1>
+                    </div>
+                    <div class = calendar-day>
+                        <h1>08</h1>
+                    </div>
+                    <div class = calendar-day>
+                        <h1>09</h1>
+                    </div>
+                    <div class = calendar-day>
+                        <h1>10</h1>
+                    </div>
+                </div>
+
+                <div class = calendar-week>
+                    <div class = calendar-day>
+                        <h1>11</h1>
+                    </div>
+                    <div class = calendar-day id = has-event>
+                        <h1>12</h1>
+                        <h2>Fear Of God</h2>
+                        <div id = event-button>
+                            <button type="button">SHOP NOW</button>
+                        </div>
+                    </div>
+                    <div class = calendar-day>
+                        <h1>13</h1>
+                    </div>
+                    <div class = calendar-day>
+                        <h1>14</h1>
+                    </div>
+                    <div class = calendar-day>
+                        <h1>15</h1>
+                    </div>
+                    <div class = calendar-day>
+                        <h1>16</h1>
+                    </div>
+                    <div class = calendar-day id = has-event>
+                        <h1>17</h1>
+                        <h2>GOLF Wang</h2>
+                        <div id = event-button>
+                            <button type="button">SHOP NOW</button>
                         </div>
                     </div>
                 </div>
-                <div class = "calendar-day">
+
+                <div class = calendar-week>
+                    <div class = calendar-day>
+                        <h1>18</h1>
+                    </div>
+                    <div class = calendar-day>
+                        <h1>19</h1>
+                    </div>
+                    <div class = calendar-day>
+                        <h1>20</h1>
+                    </div>
+                    <div class = calendar-day>
+                        <h1>21</h1>
+                    </div>
+                    <div class = calendar-day>
+                        <h1>22</h1>
+                    </div>
+                    <div class = calendar-day>
+                        <h1>23</h1>
+                    </div>
+                    <div class = calendar-day>
+                        <h1>24</h1>
+                    </div>
                 </div>
-            </div>
-            <div class = "calendar-row">
-                <div class = "calendar-day">
-                </div>
-                <div class = "calendar-day">
-                </div>
-                <div class = "calendar-day">
-                </div>
-                <div class = "calendar-day">
-                </div>
-                <div class = "calendar-day">
-                </div>
-                <div class = "calendar-day">
-                </div>
-                <div class = "calendar-day">
-                </div>
-            </div>
-            <div class = "calendar-row">
-                <div class = "calendar-day">
-                </div>
-                <div class = "calendar-day">
-                </div>
-                <div class = "calendar-day">
-                </div>
-                <div class = "calendar-day">
-                </div>
-                <div class = "calendar-day">
-                </div>
-                <div class = "calendar-day">
-                </div>
-                <div class = "calendar-day">
-                </div>
-            </div>
-            <div class = "calendar-row">
-                <div class = "calendar-day">
-                </div>
-                <div class = "calendar-day">
-                </div>
-                <div class = "calendar-day">
-                </div>
-                <div class = "calendar-day">
-                </div>
-                <div class = "calendar-day">
-                </div>
-                <div class = "calendar-day">
-                </div>
-                <div class = "calendar-day">
-                </div>
-            </div>
-            <div class = "calendar-row">
-                <div class = "calendar-day">
-                </div>
-                <div class = "calendar-day">
-                </div>
-                <div class = "calendar-day">
-                </div>
-                <div class = "calendar-day">
-                </div>
-                <div class = "calendar-day">
-                </div>
-                <div class = "calendar-day">
-                </div>
-                <div class = "calendar-day">
+
+                <div class = calendar-week>
+                    <div class = calendar-day>
+                        <h1>25</h1>
+                    </div>
+                    <div class = calendar-day>
+                        <h1>26</h1>
+                    </div>
+                    <div class = calendar-day>
+                        <h1>27</h1>
+                    </div>
+                    <div class = calendar-day id = has-event>
+                        <h1>28</h1>
+                        <h2>Fear Of God</h2>
+                        <div id = event-button>
+                            <button type="button">SHOP NOW</button>
+                        </div>
+                    </div>
+                    <div class = calendar-day>
+                        <h1>29</h1>
+                    </div>
+                    <div class = calendar-day>
+                        <h1>30</h1>
+                    </div>
+                    <div class = calendar-day>
+                        <h1>31</h1>
+                    </div>
                 </div>
             </div>
         </div>
