--- a/src/inStock.html
+++ b/src/inStock.html
@@ -72,63 +72,67 @@
                 <li>Size</li>
                 <hr>
             </div>
-            <div id = "right-side">
+            <div id = "in-stock-main">
                 <div class = "in-stock-item">
-                    <p class = "in-stock-img"></p>
-                    <div class = "in-stock-text">
-                        <p><strong>Brand</strong></p>
-                        <p>Name</p>
-                        <p>Price</p>
-                    </div>
+                    <a href=#>
+                        <p class = "in-stock-img"></p>
+                        <div class = "in-stock-text">
+                            <p><strong>Brand</strong></p>
+                            <p>Name</p>
+                            <p>Price</p>
+                        </div>
+                    </a>
                 </div>
                 <div class = "in-stock-item">
-                    <p class = "in-stock-img"></p>
-                    <div class = "in-stock-text">
-                        <p><strong>Brand</strong></p>
-                        <p>Name</p>
-                        <p>Price</p>
-                    </div>
+                    <a href=#>
+                        <p class = "in-stock-img"></p>
+                        <div class = "in-stock-text">
+                            <p><strong>Brand</strong></p>
+                            <p>Name</p>
+                            <p>Price</p>
+                        </div>
+                    </a>
                 </div>
                 <div class = "in-stock-item">
-                    <p class = "in-stock-img"></p>
-                    <div class = "in-stock-text">
-                        <p><strong>Brand</strong></p>
-                        <p>Name</p>
-                        <p>Price</p>
-                    </div>
+                    <a href=#>
+                        <p class = "in-stock-img"></p>
+                        <div class = "in-stock-text">
+                            <p><strong>Brand</strong></p>
+                            <p>Name</p>
+                            <p>Price</p>
+                        </div>
+                    </a>
                 </div>
                 <div class = "in-stock-item">
-                    <p class = "in-stock-img"></p>
-                    <div class = "in-stock-text">
-                        <p><strong>Brand</strong></p>
-                        <p>Name</p>
-                        <p>Price</p>
-                    </div>
+                    <a href=#>
+                        <p class = "in-stock-img"></p>
+                        <div class = "in-stock-text">
+                            <p><strong>Brand</strong></p>
+                            <p>Name</p>
+                            <p>Price</p>
+                        </div>
+                    </a>
                 </div>
                 <div class = "in-stock-item">
-                    <p class = "in-stock-img"></p>
-                    <div class = "in-stock-text">
-                        <p><strong>Brand</strong></p>
-                        <p>Name</p>
-                        <p>Price</p>
-                    </div>
+                    <a href=#>
+                        <p class = "in-stock-img"></p>
+                        <div class = "in-stock-text">
+                            <p><strong>Brand</strong></p>
+                            <p>Name</p>
+                            <p>Price</p>
+                        </div>
+                    </a>
                 </div>
                 <div class = "in-stock-item">
-                    <p class = "in-stock-img"></p>
-                    <div class = "in-stock-text">
-                        <p><strong>Brand</strong></p>
-                        <p>Name</p>
-                        <p>Price</p>
-                    </div>
-                </div>
-                <div class = "in-stock-item">
-                    <p class = "in-stock-img"></p>
-                    <div class = "in-stock-text">
-                        <p><strong>Brand</strong></p>
-                        <p>Name</p>
-                        <p>Price</p>
-                    </div>
-                </div>
+                    <a href=#>
+                        <p class = "in-stock-img"></p>
+                        <div class = "in-stock-text">
+                            <p><strong>Brand</strong></p>
+                            <p>Name</p>
+                            <p>Price</p>
+                        </div>
+                    </a>
+                </div>                                    
             </div>
         </div>
             
