show dropdown script

--- a/src/Brands.html
+++ b/src/Brands.html
@@ -227,5 +227,24 @@
                 <li>About</li>
             </div>
         </footer>
+
+        <script>
+            /* When the user clicks on the button, 
+            toggle between hiding and showing the dropdown content */
+            function showDropdown() {
+              document.getElementById("nav-dropdown").classList.toggle("show");
+            }
+            
+            // Close the dropdown if the user clicks outside of it
+            window.onclick = function(e) {
+              if (!e.target.matches('.dropbtn')) {
+              var navDropdown = document.getElementById("nav-dropdown");
+                if (navDropdown.classList.contains('show')) {
+                  navDropdown.classList.remove('show');
+                }
+              }
+            }
+        </script>
+        
     </body>
 </html>
