--- a/src/calendar.html
+++ b/src/calendar.html
@@ -3,6 +3,7 @@
     <head>
         <title>Calendar</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <script src="script.js"></script>
     </head>
     <body>
         <nav>
@@ -42,7 +43,7 @@
                         <a href=#>SAVED</a>
                     </li>
                     <li>
-                        <a href=#>CART</a>
+                        <a href=# id = cart>CART</a>
                     </li>
               </ul>
             </div>
