--- a/src/homepage.html
+++ b/src/homepage.html
@@ -2,6 +2,7 @@
   <head>
     <title>Thread Core</title> <!Home?>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="script.js"></script>
   </head>
   <body>
         <nav>
@@ -41,7 +42,7 @@
                         <a href=#>SAVED</a>
                     </li>
                     <li>
-                        <a href=#>CART</a>
+                        <a href=# id = cart>CART</a>
                     </li>
                 </ul>
             </div>
